corpus/cpp/template/case-02/snapshots/gcc15/render.ci.txt
note: some compiler details were not fully structured; original diagnostics are preserved
src/main.cpp:6:15: error: template instantiation failed
help: start from the first user-owned template frame and match template arguments
why: src/main.cpp:6:15: error: no matching function for call to 'expect_ptr(int&)'
| src/main.cpp:6:15
|     expect_ptr(value);
|               ^
while instantiating:
  - src/main.cpp:2:6 template argument deduction/substitution failed:
raw:
  src/main.cpp:6:15: error: no matching function for call to 'expect_ptr(int&)'
other errors:
  - src/main.cpp:6:5: error: template instantiation failed
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output